able to view events, all requirements met except sorting by dist. (dist is displayed however)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,16 +27,20 @@
             android:name=".AddPartyActivity"
             android:exported="false"
             android:label="@string/title_activity_add_party"
-            android:theme="@style/Theme.PartyApp" />
+            android:theme="@style/Theme.PartyApp"
+            android:windowSoftInputMode="adjustPan"/>
         <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:exported="true"
+            android:windowSoftInputMode="adjustPan">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".LocalsExtra"/>
+
     </application>
 
 </manifest>
