Working User SignUpActivity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,9 @@
         <activity android:name=".LoginActivity"
             android:exported="false"
             android:label="Login" />
+        <activity android:name=".SignUpActivity"
+            android:exported="false"
+            android:label="SignUp" />
     </application>
 
 </manifest>
