--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,10 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -16,7 +15,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Base.Theme.PartyApp"
-        tools:targetApi="31" >
+        tools:targetApi="31">
+        <activity
+            android:name=".OwnerEventExtraActivity"
+            android:exported="false"
+            android:label="@string/title_activity_owner_event_extra"
+            android:theme="@style/Base.Theme.PartyApp" />
         <activity
             android:name=".AddEstablishmentActivity"
             android:exported="false"
@@ -41,7 +45,7 @@
             android:theme="@style/Base.Theme.PartyApp" />
         <activity
             android:name=".MainActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -60,11 +64,10 @@
             android:name=".LocalsExtra"
             android:exported="false"
             android:label="Locals" />
-
         <activity
             android:name=".EstablishmentExtra"
             android:exported="false"
-            android:label="LocalsE"/>
+            android:label="LocalsE" />
     </application>
 
 </manifest>
