See attendees list activity. Updates Firebase to include table for users and User data along with foundation of check-in. Creates UserModel for info access and updating. Updates firebase to include EventAttendees (inverted version of UsersAttending table for ease of access). Cleaned up code.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
         android:theme="@style/Base.Theme.PartyApp"
         tools:targetApi="31">
         <activity
+            android:name=".SeeAttendeesActivity"
+            android:exported="false" />
+        <activity
             android:name=".OwnerEventExtraActivity"
             android:exported="false"
             android:label="@string/title_activity_owner_event_extra"
