--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,13 +24,13 @@
         android:theme="@style/Base.Theme.PartyApp"
         tools:targetApi="31">
         <activity
-            android:name=".BarcodeScanActivity"
+            android:name=".activities.BarcodeScanActivity"
             android:exported="false" />
         <activity
-            android:name=".CheckInActivity"
+            android:name=".activities.CheckInActivity"
             android:exported="false" />
         <activity
-            android:name=".SeeAttendeesActivity"
+            android:name=".activities.SeeAttendeesActivity"
             android:exported="false" />
 
         <activity
@@ -40,12 +40,12 @@
             android:theme="@style/zxing_CaptureTheme"
             android:exported="false" />
         <activity
-            android:name=".OwnerEventExtraActivity"
+            android:name=".activities.OwnerEventExtraActivity"
             android:exported="false"
             android:label="@string/title_activity_owner_event_extra"
             android:theme="@style/Base.Theme.PartyApp" />
         <activity
-            android:name=".AddEstablishmentActivity"
+            android:name=".activities.AddEstablishmentActivity"
             android:exported="false"
             android:label="@string/title_activity_add_establishment"
             android:theme="@style/Base.Theme.PartyApp" />
@@ -62,12 +62,12 @@
             android:required="false" />
 
         <activity
-            android:name=".AddPartyActivity"
+            android:name=".activities.AddPartyActivity"
             android:exported="false"
             android:label="@string/title_activity_add_party"
             android:theme="@style/Base.Theme.PartyApp" />
         <activity
-            android:name=".MainActivity"
+            android:name=".activities.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -76,22 +76,22 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".LoginActivity"
+            android:name=".activities.LoginActivity"
             android:exported="false"
             android:label="Login" />
         <activity
-            android:name=".SignUpActivity"
+            android:name=".activities.SignUpActivity"
             android:exported="false"
             android:label="SignUp" />
         <activity
-            android:name=".LocalsExtra"
+            android:name=".activities.LocalsExtraActivity"
             android:exported="false"
             android:label="Locals" />
         <activity
-            android:name=".EstablishmentExtra"
+            android:name=".activities.EstablishmentExtraActivity"
             android:exported="false"
             android:label="LocalsE" />
-        <activity android:name=".AddReviewActivity"
+        <activity android:name=".activities.AddReviewActivity"
             android:exported="false"
             android:label="Review"/>
     </application>
